--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,7 +15,7 @@
     <string name="volume_traded">Volume traded</string>
     <string name="buy">Buy</string>
     <string name="sell">Sell</string>
-    <string name="enter_the_quantity_to_buy_or_sell">Enter the quantity to buy or sell...</string>
-    <string name="buy_sell_prompt_message">Please enter a number of units to buy or sell...</string>
+    <string name="enter_the_quantity_to_buy_or_sell">Enter the quantity to buy or sell…</string>
+    <string name="buy_sell_prompt_message">Please enter a number of units to buy or sell…</string>
     <string name="insufficient_funds_message">Insufficient funds to make this purchase!</string>
 </resources>
