--- a/app/src/main/res/values-night/strings.xml
+++ b/app/src/main/res/values-night/strings.xml
@@ -19,4 +19,5 @@
     <string name="buy_sell_prompt_message">Please enter a number of units to buy or sell…</string>
     <string name="insufficient_funds_message">Insufficient funds to make this purchase!</string>
     <string name="app_name">PseudoTrade</string>
+    <string name="main_hello">Hello</string>
 </resources>
